fixed mobile alignment

--- a/src/ui/assets/styles/components/_leftSearchBox.scss
+++ b/src/ui/assets/styles/components/_leftSearchBox.scss
@@ -42,5 +42,6 @@
 .clear-filters {
 	float: left;
 	clear: left;
-	padding: 10px 0;
+	width: 100%;
+	margin: 10px 0;
 }
